--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Crazy Cattle 3D</title>
 </head>
-<body>
+<body bgcolor="black">
     <center>
     <img src="crazy-cattle-3d-online.png" width="200px" height="200px">
     </center>
